--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
         </div>
     </div>
 
-    <script src="app.js"></script>
+    <script src="scripts/app.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.16.105/pdf.min.js"></script>
 </body>
 
