Versión con buen prompt pero sin fine tunning

--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
                         <label for="file" class="form-label">Subir Documento Legal</label>
                         <input type="file" class="form-control" id="file" accept=".pdf,.doc,.docx" required>
                     </div>
-                    <button type="submit" class="btn btn-primary w-100">Subir y Analizar</button>
+                    <button type="submit" class="btn btn-primary w-100">Analizar</button>
                 </form>
             </div>
         </div>
