Arregle lo de la API key de google

--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
         <div class="row mt-5" id="analysis-result">
             <div class="col-md-8 offset-md-2">
                 <h4>Resultado del Análisis</h4>
-                <pre id="result-text" class="p-3 border bg-light"></pre>
+                <pre id="result-text" class="p-3 border bg-light" style="overflow-y: auto; margin-bottom: 50px;"></pre>
             </div>
         </div>
     </div>
